# gparts

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  autogen.sh  configure.ac
data/: companies.xml  epson-crystals.sql  onsemi-general-transistors.xml  onsemi-switching-diodes.sql  onsemi-transistors.sql  packages.sql  packages.xml  parts-bourns.py  parts-vishay-sprague.py  rhom-discretes.xml
m4/: geda-guile.m4
sql/: create-all.sql
sql/mysql/: create-basic.sql  create-categories.sql  create-crystals.sql  create-discretes.sql  create-passives.sql
sql/sqlite/: convert.xml  create-basic.sql  create-categories.sql  create-discretes.sql  create-passives.sql  packages.sql  parts.sql  sample.db  symbols.sql  temp.sql
src/: Doxyfile  Makefile.am  data-model.xml  geom-angle.c  geom-angle.h  geom-arc.c  geom-arc.h  geom-bounds.c  geom-bounds.h  geom-box.c  geom-box.h  geom-circle.c  geom-circle.h  geom-line.c  geom-line.h  geom-transform.c  geom-transform.h  geom.h  gformtest-main.c  gparts-category-controller.c  gparts-category-controller.h  gparts-category-model.c  gparts-category-model.h  gparts-column-data.c  gparts-column-data.h  gparts-config.c  gparts-config.h  gparts-connect-controller.c  gparts-connect-controller.h  gparts-connect-data.c  gparts-connect-data.h  gparts-controller.c  gparts-controller.h  gparts-customize-ctrl.c  gparts-customize-ctrl.h  gparts-customize-model.c  gparts-customize-model.h  gparts-database-factory.c  gparts-database-factory.h  gparts-database-result.c  (+275 more)
sym/gparts/: gp-capacitor-non-1.sym  gp-capacitor-non-2.sym  gp-capacitor-pol-1.sym  gp-capacitor-pol-2.sym  gp-diode-1.sym  gp-diode-2.sym  gp-resistor-1.sym  gp-resistor-2.sym  gp-schottky-1.sym  gp-schottky-2.sym  gp-tuning-1.sym  gp-tuning-2.sym  gp-tunnel-1.sym  gp-tunnel-2.sym  gp-tvs-1.sym  gp-tvs-2.sym  gp-zener-1.sym  gp-zener-2.sym
tmp/: parts-bourns.sql  parts-vishay-sprague.sql  symbols.sql
tools/: onsemi-switching-diodes.py  symbols.py
xml/forms/: Makefile.am  capacitor-add.xml  company-add.xml  company-delete.xml  diode-add.xml  footprint-add.xml  inductor-add.xml  package-add.xml  resistor-add.xml
