SUBDIRS = src

ACLOCAL_AMFLAGS = -I m4

MOSTLYCLEANFILES = core *~
CLEANFILES = core *~
DISTCLEANFILES = core *~
MAINTAINERCLEANFILES = core *~ Makefile.in configure config.h.in \
			config.status aclocal.m4 config.guess config.rpath \
			config.sub depcomp install-sh ltmain.sh missing \
			mkinstalldirs

